Added logging to all files

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "koa": "^2.14.2",
     "koa-bodyparser": "^4.4.1",
     "mongodb": "^6.3.0",
-    "toml": "^3.0.0"
+    "toml": "^3.0.0",
+    "winston": "^3.11.0"
   }
 }
