--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "js-sha256": "^0.10.1",
     "koa": "^2.14.2",
     "koa-bodyparser": "^4.4.1",
+    "koa-router": "^12.0.1",
     "mongodb": "^6.3.0",
     "toml": "^3.0.0",
     "winston": "^3.11.0"
